--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="login_with_facebook">Login with Facebook</string>
     <string name="back_button">back_button</string>
     <string name="onboarding_image_view">onboarding_image_view</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
 </resources>
